syntax = "proto3";

package helloworld;
 
// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}
 
// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  double inputnum1 = 2;
  double inputnum2 = 3;
}
 
// The response message containing the greetings
message HelloReply {
  string message = 1;
}